# ai-rag-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: agent.py  auth.py  chat.py  documents.py  kb.py  retrieval.py
app/core/: celery_app.py  config.py  database.py  security.py
app/models/: __init__.py  chunk.py  chunk_term.py  conversation.py  document.py  knowledge_base.py  knowledge_base_term_stat.py  message.py  user.py
app/schemas/: agent.py  auth.py  chat.py  chunk.py  conversation.py  document.py  kb.py  retrieval.py
app/services/: agent_service.py  bm25_index.py  conversation_service.py  document_ingestion.py  document_service.py  knowledge_base_service.py  rag_service.py  retrieval.py
app/tasks/: document_tasks.py
app/utils/: embeddings.py  file_parser.py  llm_client.py  rerank_client.py  text_cleaner.py  text_splitter.py
tests/: test_agent_api.py  test_agent_service.py  test_chat_api.py  test_config.py  test_conversation_service.py  test_document_ingestion.py  test_document_tasks.py  test_documents_api.py  test_embeddings.py  test_kb_api.py  test_llm_client.py  test_rag_service.py  test_retrieval.py  test_text_cleaner.py  test_text_splitter.py
