[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.5.3",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "langgraph>=1.0.2",
    "openai>=1.72.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.3.6",
    "pypdf>=6.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
